# ports-and-adapters-cpp-sample

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
src/main/: CMakeLists.txt  main.cpp
src/main/adapters/: CMakeLists.txt
src/main/adapters/console/: ConsoleController.cpp  ConsoleController.h  ConsoleInput.cpp  ConsoleInput.h  ConsoleState.h  ConsoleView.h  Parser.cpp  Parser.h
src/main/adapters/logger/: AsyncLogger.cpp  AsyncLogger.h
src/main/adapters/messaging/: SynchronizedCommandQueue.h
src/main/adapters/monitors/: UserInactiveWatchdog.h  WatchDog.h
src/main/adapters/simulation/: SimulatedArm.h
src/main/core/: CMakeLists.txt  Kiosk.cpp  Kiosk.h
src/main/core/commands/: KioskCommand.h
src/main/core/ports/: IArmPort.h  ICommandQueue.h  ILogger.h  IViewPort.h
src/main/core/states/: CoreLogicState.cpp  CoreLogicState.h  IKioskState.h  IdleState.cpp  IdleState.h  StateCommands.h  States.cpp  States.h  WaitingState.cpp  WaitingState.h
src/main/utils/: CMakeLists.txt  CommandQueue.h  IActivityListener.h  IArmTelemetry.h  IStatusListener.h
src/test/: CMakeLists.txt  test_main.cpp  ui_test  ui_test.cpp
src/test/adapters/simulation/: test_arm_simulation.cpp
src/test/core/: test_kiosk.cpp
src/test/core/states/: test_IdleStates_transitions.cpp  test_InitializingStates_transitions.cpp  test_approachingItemStates_transitions.cpp  test_bootstate_transitions.cpp  test_idlestate_transitions.cpp  test_processingSelectionStates_transitions.cpp
